<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolTopbar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/topbar_main_accountBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_account"
            android:contentDescription="@string/profil"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/topbar_main_selectAllBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_done_all_24"
            android:contentDescription="@string/tumunu_sec"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/topbar_main_cancelBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_close"
            android:visibility="gone"
            android:contentDescription="@string/iptal" />

        <TextView
            android:id="@+id/topbar_main_selectedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textSize="20sp"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>